// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Props align 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  text-align: center;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props bold 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-weight: bold;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props color 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  color: #123456;
}

<span
  class="c0"
  color="#123456"
>
  Content
</span>
`;

exports[`Props font 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-family: arial;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props italic 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-style: italic;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props letterSpacing 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-letter-spacing: 1em;
  -moz-letter-spacing: 1em;
  -ms-letter-spacing: 1em;
  letter-spacing: 1em;
}

<span
  class="c0"
  letter-spacing="1em"
>
  Content
</span>
`;

exports[`Props lineHeight 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  line-height: 1em;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props size 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-size: 20px;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props transform 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  text-transform: uppercase;
}

<span
  class="c0"
  transform="uppercase"
>
  Content
</span>
`;

exports[`Props underlined 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  -webkit-text-decoration: underline;
  text-decoration: underline;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props weight 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-weight: 200;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Props weight 2`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Typography renders 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
}

<span
  class="c0"
>
  Content
</span>
`;

exports[`Using variant no overrides 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 1;
  font-size: 6rem;
}

<span
  class="c0"
  letter-spacing="-0.01562em"
>
  Content
</span>
`;

exports[`Using variant with overrides 1`] = `
.c0 {
  margin: 0;
  -webkit-font-smoothing: antialiased;
  font-weight: 300;
  font-family: "Roboto","Helvetica","Arial",sans-serif;
  -webkit-letter-spacing: -0.01562em;
  -moz-letter-spacing: -0.01562em;
  -ms-letter-spacing: -0.01562em;
  letter-spacing: -0.01562em;
  line-height: 4;
  font-size: 6rem;
}

<h1
  class="c0"
  letter-spacing="-0.01562em"
>
  Content
</h1>
`;
